# 26a-emb-aps-2-coreia

./: CMakeLists.txt  README.md  python.py
.github/workflows/: cppcheck.yml  embedded-check.yml
ei-model/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
ei-model/tflite-model/: tflite_learn_1024827_3_compiled.cpp
ei_model/tflite-model/: tflite_learn_1024827_3_compiled.h
main/: CMakeLists.txt  FreeRTOSConfig.h  audio_jogo.h  main.c  main.cpp
